# sw-build-manager

./: .env.example  .gitignore  LICENSE  README.md  large anchor.xml
game_client/: pyproject.toml
game_client/src/game_client/: build_parser.py  def_parser.py  game_path.py  matrix.py  progress_bar.py  server_api.py
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  base_app.ts  environ.ts  middlewares.ts  server.ts  ssl.ts
server/src/database/: init.sql  sqlite_store.ts
server/src/models/: creation.ts  creation_type.ts  creation_usage.ts  index.ts  manufacturer.ts  microcontroller.ts  operator.ts  status.ts
server/src/utility/: code_mapping.ts  exceptions.ts  logger.ts  package.ts  utils.ts
