[project]
name = "game-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Antoine Buirey",email = "91411073+AntoineBuirey@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "game_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
