[project]
name = "game-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Antoine Buirey",email = "91411073+AntoineBuirey@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "idna==3.18",
    "lxml==6.1.1",
    "requests==2.34.2",
    "urllib3==2.7.0"
]